a1/brendan_gordon/TEST_PROGRAMS/invalidtype/stefan_knudsen/floatLoop.min
while 1.0 do
print "float";
done
